--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,6 @@ website:
 
 format:
   html:
-    theme: 
-      light: flatly
-      dark: darkly
+    theme:
+      light: journal
+      dark: sketchy
