--- a/.github/workflows/render-website.yaml
+++ b/.github/workflows/render-website.yaml
@@ -7,27 +7,35 @@ name: Render website
 
 jobs:
   build-website:
-    runs-on: self-hosted
-    container:
-      image: ghcr.io/dukestatsci/r_gh_actions:latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v4
 
-      - name: Install packages
+      - name: Setup Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: prerelease
+
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3'
+
+      - name: Install R packages
         run: |
-          checklist::install_missing_pkgs()
-        shell: Rscript {0}
-        
+          Rscript -e "install.packages(c('tidyverse', 'readxl', 'tidymodels', 'GGally', 'naniar', 'janitor', 'skimr', 'car'), repos = 'https://cran.rstudio.com/')"
+
       - name: Render Quarto Project
         run: |
           quarto render &&
           touch docs/.nojekyll
-      
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           clean: false
           branch: gh-pages
           folder: docs
+          token: ${{ secrets.GITHUB_TOKEN }}
