--- a/.github/workflows/render-website.yaml
+++ b/.github/workflows/render-website.yaml
@@ -15,13 +15,11 @@ jobs:
 
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        with:
-          version: prerelease
 
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.3'
+          r-version: "4.3"
 
       - name: Install R packages
         run: |
