--- a/.github/workflows/render-website.yaml
+++ b/.github/workflows/render-website.yaml
@@ -21,9 +21,16 @@ jobs:
         with:
           r-version: "4.3"
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libfontconfig1-dev
+
       - name: Install R packages
         run: |
-          Rscript -e "install.packages(c('tidyverse', 'readxl', 'tidymodels', 'GGally', 'naniar', 'janitor', 'skimr', 'car'), repos = 'https://cran.rstudio.com/')"
+          Rscript -e "options(repos = c(CRAN = 'https://cran.rstudio.com/'))"
+          Rscript -e "install.packages(c('tidyverse', 'readxl', 'tidymodels', 'GGally', 'naniar', 'janitor', 'skimr', 'car'), dependencies = TRUE, Ncpus = 2)"
+          Rscript -e "library(tidyverse); library(readxl); library(tidymodels)"
 
       - name: Render Quarto Project
         run: |
