Changed presentation page from pdf to Quarto

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ website:
       - text: Home
         href: index.qmd
       - text: Presentation
-        href: presentation.pdf
+        href: presentation.qmd
       - text: Proposal
         href: proposal.qmd
       - text: EDA
